# OMRE-SIUE

./: OMRE_Status.ods  OMRE_Status.xlsx  README.md  Robot_Status  set_up_readme.md
Arduino/OMRE_ARDUINO/: Command.ino  OMRE_ARDUINO.ino
Arduino/OMRE_ARDUINO_ADA_IMU/: printdata.ino.ino
Arduino/OMRE_ARDUINO_IMU/: OMRE_ARDUINO_IMU.ino  Vector.ino
Arduino/OMRE_ARDUINO_MAIN/: OMRE_ARDUINO_MAIN.ino
Arduino/arduinoSerialInterface/: arduinoSerialInterface.ino
Jetson-ATMega-Robot/: readme
Jetson-ATMega-Robot/python/: .newmatplotlib.py.swp  .openLoop.py.swp  libomni.py  omrebot.py  openLoop.py  test.py
Jetson-ATMega-Robot/robotDiary/: OMRE-3  OMRE-6  RobotGeneral
OMRE_Arduino/OMRE_ARDUINO/: Cmd.ino  Command.ino  Current_PID.ino  OMRE_ARDUINO.ino  PID_Speed.ino  Print.ino  RPM.ino  Sensors.ino
OMRE_Arduino/OMRE_ARDUINO_ADA_IMU/: OMRE_ARDUINO_ADA_IMU.ino
OMRE_Arduino/OMRE_ARDUINO_IMU/: Cmd.ino  Motor_PWM.ino  OMRE_ARDUINO_IMU.ino  Sensors.ino
OMRE_Arduino/OMRE_ARDUINO_MAIN/: Cmd.ino  Motor_PID.ino  Motor_PWM.ino  Print.ino  Run_Motor.ino  State.ino  Update_RPM.ino
OMRE_Python/OpenCV/: test_openCV.py  test_version.py
OMRE_Python/Testing/: example.py  libomni.py  rpm_pid_testing.py
OMRE_Python/dynamics_modeling/: dynamics_model.py  dynamics_model_openLoop.py  libomni.py  motor_dynamics_testing.py  pwm_values.txt
OMRE_Python/g2g/: g2g_1_edition.py  g2g_2steps.py
OMRE_Python/g2g_oa/: g2g_OA.py  g2g_encoder.py  g2g_realsense.py  libomni.py  square_values.txt  testing_g2g.py  triangle_values.txt
OMRE_Python/old_code/: OMRE_python.py  libomni.py  omrebot.py  openLoop.py  test.py
OMRE_Python/openCV/: Video_test.py  distance_to_camera.py  tegra-cam.py
OMRE_Python/path_following/: circle_path.py  circle_pathf.py  circle_traf.py  test.py
OMRE_Python/realsenseT265/: libomni.py  pose_data.py
OMRE_Python/trajectory_control/: square_values.txt  vol_tr_controller.py
Python/Testing/: pwm_testing_model.py  rpm_values.txt
Python/g2g_oa/: g2g_OA.py  libomni.py  obstacleAvoidance.py
Python/goToGoal/: g2g.py
Python/imu/: minIMU.py  robot_kinematic_record.py
Python/obstacleAvoidance/: libomni.py
Python/old_code/: OMRE_python.py
arduino/OMRE_ARDUINO/: Command.ino  Command_Rcv.ino  Enco_UltraS.ino  OMRE_ARDUINO.ino  PID_Speed.ino  Print.ino  (+3 more)
catkin_ws/src/checking_rpm/: CMakeLists.txt  package.xml
catkin_ws/src/checking_rpm/src/: updateRPM.cpp
catkin_ws/src/driver/: CMakeLists.txt
catkin_ws/src/driver/include/driver/: ArduinoInterface.h
catkin_ws/src/driver/launch/: ros_arduino.launch
catkin_ws/src/driver/src/: ArduinoInterface.cpp  arduino_commander.cpp  arduino_driver.cpp  arduino_listener.cpp
python/: OMRE_python.py  openLoop.py
robotDiary/: OMRE_Status.ods  OMRE_Status.xlsx  robot_setup_newJetson
(+487 files in other folders)
